// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render empty filter selects 1`] = `
<div
  className="card card-outline-secondary my-4"
>
  <div
    className="card-header"
  >
    Filters
  </div>
  <div
    className="card-body"
  >
    <div
      className="form-group"
    >
      <div
        className="form-row"
      >
        <div
          className="form-group col-md-6"
        >
          <label
            htmlFor="repositories"
          >
            Repositories
          </label>
          <StateManager
            defaultInputValue=""
            defaultMenuIsOpen={false}
            defaultValue={null}
            id="repositories"
            options={
              Array [
                Object {
                  "label": "All",
                },
              ]
            }
            value={
              Object {
                "label": "All",
              }
            }
          />
        </div>
        <div
          className="form-group col-md-6"
        >
          <label
            htmlFor="authors"
          >
            Authors
          </label>
          <StateManager
            defaultInputValue=""
            defaultMenuIsOpen={false}
            defaultValue={null}
            id="authors"
            options={
              Array [
                Object {
                  "label": "All",
                },
              ]
            }
            value={
              Object {
                "label": "All",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render with filter select options 1`] = `
<div
  className="card card-outline-secondary my-4"
>
  <div
    className="card-header"
  >
    Filters
  </div>
  <div
    className="card-body"
  >
    <div
      className="form-group"
    >
      <div
        className="form-row"
      >
        <div
          className="form-group col-md-6"
        >
          <label
            htmlFor="repositories"
          >
            Repositories
          </label>
          <StateManager
            defaultInputValue=""
            defaultMenuIsOpen={false}
            defaultValue={null}
            id="repositories"
            options={
              Array [
                Object {
                  "label": "All",
                },
                Object {
                  "label": "repo1",
                  "value": 1,
                },
                Object {
                  "label": "repo2",
                  "value": 2,
                },
              ]
            }
            value={
              Object {
                "label": "All",
              }
            }
          />
        </div>
        <div
          className="form-group col-md-6"
        >
          <label
            htmlFor="authors"
          >
            Authors
          </label>
          <StateManager
            defaultInputValue=""
            defaultMenuIsOpen={false}
            defaultValue={null}
            id="authors"
            options={
              Array [
                Object {
                  "label": "All",
                },
                Object {
                  "label": "author1",
                  "value": "author1",
                },
                Object {
                  "label": "author2",
                  "value": "author2",
                },
              ]
            }
            value={
              Object {
                "label": "All",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Render with filter select options and already selected options 1`] = `
<div
  className="card card-outline-secondary my-4"
>
  <div
    className="card-header"
  >
    Filters
  </div>
  <div
    className="card-body"
  >
    <div
      className="form-group"
    >
      <div
        className="form-row"
      >
        <div
          className="form-group col-md-6"
        >
          <label
            htmlFor="repositories"
          >
            Repositories
          </label>
          <StateManager
            defaultInputValue=""
            defaultMenuIsOpen={false}
            defaultValue={null}
            id="repositories"
            options={
              Array [
                Object {
                  "label": "All",
                },
                Object {
                  "label": "repo1",
                  "value": 1,
                },
                Object {
                  "label": "repo2",
                  "value": 2,
                },
              ]
            }
            value={
              Object {
                "label": "repo1",
                "value": 1,
              }
            }
          />
        </div>
        <div
          className="form-group col-md-6"
        >
          <label
            htmlFor="authors"
          >
            Authors
          </label>
          <StateManager
            defaultInputValue=""
            defaultMenuIsOpen={false}
            defaultValue={null}
            id="authors"
            options={
              Array [
                Object {
                  "label": "All",
                },
                Object {
                  "label": "author1",
                  "value": "author1",
                },
                Object {
                  "label": "author2",
                  "value": "author2",
                },
              ]
            }
            value={
              Object {
                "label": "author1",
                "value": "author1",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
